@@ -1,8 +1,8 @@
 Package: Rd2rst
 Type: Package
 Title: Convert R Documentation to Markedly- (MyST) or reStructured- (rST) Text
-Version: 0.1.0.9002
-Date: 2021-06-01
+Version: 0.1.0.9003
+Date: 2021-06-03
 Authors@R: c(
     person("Marek", "Gagolewski",
         role = c("aut", "cre", "cph"),
