@@ -10,5 +10,7 @@ importFrom(stringi,stri_replace_all_regex)
 importFrom(stringi,stri_replace_first_regex)
 importFrom(stringi,stri_length)
 importFrom(stringi,stri_replace_first_fixed)
+importFrom(stringi,stri_replace_all_fixed)
+importFrom(stringi,stri_match_all_regex)
 importFrom(stringi,stri_replace_last_fixed)
 importFrom(knitr,knit)
